--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "next": "12.1.0",
@@ -17,6 +18,9 @@
     "@netlify/plugin-nextjs": "^4.2.7",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "axe-core": "^4.4.1",
+    "cypress": "^9.5.1",
+    "cypress-axe": "^0.14.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.5.5"
